# aioresponses

./: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  ruff.yml  static_analysis.yml
aioresponses/: __init__.py  compat.py  core.py
tests/: base.py  test_aioresponses.py  test_compat.py
